tests/dataset/tpc-ds/compiler/kotlin/q56.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/q56.kt:131:13: error: unresolved reference: concat
val union = concat(ss, cs, ws)
            ^
